out rvrnt not working

--- a/stm32_ffb_wheel.ioc
+++ b/stm32_ffb_wheel.ioc
@@ -100,7 +100,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.6
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.5
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -159,11 +159,13 @@ TIM3.Period=16383
 TIM3.Prescaler=0
 TIM3.Pulse-PWM\ Generation4\ CH4=0
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CUSTOMHID_FS,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CUSTOMHID_FS,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,MANUFACTURER_STRING,VID,PID_CUSTOMHID_FS
 USB_DEVICE.MANUFACTURER_STRING=STM32
+USB_DEVICE.PID_CUSTOMHID_FS=8270
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=FFB Steering wheel
-USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=32
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=64
 USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=95
+USB_DEVICE.VID=1003
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_ND.Mode=No_Debug
