--- a/stm32_ffb_wheel.ioc
+++ b/stm32_ffb_wheel.ioc
@@ -34,20 +34,24 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=PB4
-Mcu.Pin12=VP_SYS_VS_ND
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=VP_SYS_VS_ND
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PB1
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=15
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -74,6 +78,22 @@ PA12.Signal=USB_DP
 PA2.Signal=ADCx_IN2
 PA3.Signal=ADCx_IN3
 PB1.Signal=S_TIM3_CH4
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=Button1
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=Button2
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=Button3
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=Button4
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=MotorPositive
 PB3.Locked=true
