--- a/stm32_ffb_wheel.ioc
+++ b/stm32_ffb_wheel.ioc
@@ -23,13 +23,14 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -40,10 +41,12 @@ Mcu.Pin12=PA11
 Mcu.Pin13=PA12
 Mcu.Pin14=PB3
 Mcu.Pin15=PB4
-Mcu.Pin16=VP_SYS_VS_ND
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_ND
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -51,7 +54,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PB1
 Mcu.Pin8=PB12
 Mcu.Pin9=PB13
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -102,6 +105,10 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=MotorNegative
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=board_led
 PC13-TAMPER-RTC.Locked=true
@@ -125,7 +132,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
